plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'cat.cicd'
version = '0.0.1-SNAPSHOT'
description = 'CI/CD Web Backend for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    configurations {
        configureEach {
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        }
    }
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Web
    implementation ('org.springframework.boot:spring-boot-starter-web')

    // Lombok / Logger (log4j2)
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

    // JPA / Database
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation ('org.springframework.boot:spring-boot-starter-data-jpa')

    // Spring Test
    testImplementation ('org.springframework.boot:spring-boot-starter-test')
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Swagger UI (SpringDoc)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

    // AWS SDK
    implementation 'software.amazon.awssdk:ecs'
    implementation platform('software.amazon.awssdk:bom:2.38.8')
    implementation 'software.amazon.awssdk:ecr'
    implementation 'software.amazon.awssdk:cloudwatch'
    implementation 'software.amazon.awssdk:resourcegroupstaggingapi'

    // GitHub
    implementation 'org.kohsuke:github-api:1.315'
}

tasks.named('test') {
    useJUnitPlatform()
	enabled = false
}
